--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ margin-top:20px;
 }
 .titlecontainer{
 	min-height:70px;
-	
+	margin-bottom:3px;
 	margin-left:30px;
 }
 .pictitle{
